--- a/templates/index.html
+++ b/templates/index.html
@@ -528,7 +528,11 @@
             <p><strong>Legal Notice:</strong> This tool is designed for personal use only. Users are responsible for ensuring they have the right to download and use any content. 
             Respect copyright laws and Reddit's terms of service. Do not download or distribute content without proper authorization from the copyright holder.</p>
             <p>Reddit is a trademark of Reddit, Inc. This application is not affiliated with or endorsed by Reddit, Inc.</p>
-            <p>© 2023 Reddit Media Downloader. All rights reserved.</p>
+            <p>\C2\A9 2023 Reddit Media Downloader. All rights reserved. | 
+   <a href="https://github.com/Killersparrow1/reddit-media-downloader-V1.1" target="_blank">
+       GitHub Repository
+   </a>
+          </p>
         </div>
     </footer>
 
